feat: implement DownloadEvent for font download tracking and update FontManager to use it